update màn quản lí nhân viên mới